Release Notes for the evrClient and event package
--------------------------------------------------

evrClient-R1-0-p6: 2016-04-19 K. Kim
	* FPGA junction temperature reading for SLAC-EVR

evrClient-R1-0-p4: 2015-11-18 S. Gruden
	* Prototype of 'ErGetTicks' moved to devMrfEr.h
	* path changes

evrClient-R1-0-p3: 2015-11-13 S. Gruden
	* path changes only

evrClient-R1-0-p2: 2015-11-09 S. Gruden
	* updated RELEASE_NOTES

evrClient-R1-0-p1: 2015-11-05 S. Gruden
	* bug fix: support the case when the event record is disabled (disable all
	  triggers and the interrupt).

evrClient-R1-0: 2015-11-05 S. Gruden
	* Replaced the 'event' package with the support for the EVRMA system
	  (note that the evrSupport directory functionality remains the same as
	  was in the 'event' module).


---- package change: event -> evrClient ------


event-R4-2-0: 2015-08-18 K. Kim
      * Include Tomo's EMCOR EVR support
      * add up debugging feature for interrupt, mapping ram, event FIFO and data buffer handling

event-R4-1-6: 2015-02-18 K. Kim
      * consider for 360Hz resolution timestamp
        allow to set  TS1ST=0, TS2ND=0 for 360Hz resolution timestamp

event-R4-1-5: 2015-01-12  K. Kim

      * fix unstable fiducial rate calculation due to the race condition between the rate calculation and the 360Hz processing
      * use latched clock counter for ErGetTicks()

      * Change to support epics R3.15
      * Fix autosave info field typo: 29-Dec-2014 (E. Williams) 
        * can't use commas as a delimiter for autosave info fields; must use spaces

      * Bug fix in BSA processing: 28-Jan-2015 K. Kim - retagging
        -Check if the EDEF has initialized and wipe out old values if it has.
        -Bug fix in read_bsa()
        

event-R4-1-4: 2014-12-4 K. Kim
      * register evrInitialize() function into iocsh
	M evrSupport/src/drvEvr.c
	M evrSupport/src/drvEvr.dbd

event-R4-1-3: 2014-06-20 K. Kim
      *Automatic configuration for EVG-200 and EVG-230