@@ -13,3 +13,9 @@ O.vxWorks-ppc604_long/
 O.linuxRT-x6/
 O.Common/
 O.linuxRT_glibc-i686/
+cfg
+db
+dbd
+include
+lib
+restore
