@@ -87,6 +87,11 @@ int evrTimeGet            (epicsTimeStamp  *epicsTime_ps,
                            unsigned int     eventCode);
 int evrTimePutPulseID     (epicsTimeStamp  *epicsTime_ps,
                            unsigned int     pulseID);
+
+/* Routines for timing diagnostics */
+int evrGetLastFiducial( );
+unsigned long long evrGetFiducialTsc();
+
 /* Routines used only by event module and Mpg application */
 #ifdef INCevrMessageH
 int evrTimeInit           (epicsInt32   firstTimeSlotIn,
